@@ -23,16 +23,21 @@ import java.util.*;
 public class EnzymeMissileRack extends HardpointModule {
     public static final EnzymeMissileRack ENZYME_MISSILE_RACK_2_B_F = new EnzymeMissileRack("ENZYME_MISSILE_RACK_2_B_F", HorizonsBlueprintName.ENZYME_MISSILE_RACK, ModuleSize.SIZE_2, ModuleClass.B, Origin.TECHBROKER, false, Mounting.FIXED, 480500, "Hpt_CausticMissile_Fixed_Medium", Map.ofEntries(Map.entry(HorizonsModifier.MASS, 4.00), Map.entry(HorizonsModifier.INTEGRITY, 51.0), Map.entry(HorizonsModifier.POWER_DRAW, 1.2), Map.entry(HorizonsModifier.BOOT_TIME, 0.0), Map.entry(HorizonsModifier.DAMAGE_PER_SECOND, 2.5), Map.entry(HorizonsModifier.DAMAGE, 5.0), Map.entry(HorizonsModifier.DISTRIBUTOR_DRAW, 0.08), Map.entry(HorizonsModifier.THERMAL_LOAD, 1.5), Map.entry(HorizonsModifier.ARMOUR_PIERCING, 60.0), Map.entry(HorizonsModifier.SHOT_SPEED, 750.0), Map.entry(HorizonsModifier.RATE_OF_FIRE, 0.500), Map.entry(HorizonsModifier.BURST_INTERVAL, 2.000), Map.entry(HorizonsModifier.AMMO_CLIP_SIZE, 8.0), Map.entry(HorizonsModifier.AMMO_MAXIMUM, 64.0), Map.entry(HorizonsModifier.RELOAD_TIME, 5.0), Map.entry(HorizonsModifier.BREACH_DAMAGE, 0.0), Map.entry(HorizonsModifier.MIN_BREACH_CHANCE, 0.80), Map.entry(HorizonsModifier.MAX_BREACH_CHANCE, 1.0), Map.entry(HorizonsModifier.EXPLOSIVE_DAMAGE_RATIO, 0.8), Map.entry(HorizonsModifier.CAUSTIC_DAMAGE_RATIO, 0.2), Map.entry(HorizonsModifier.DAMAGE_FALLOFF_START, 3000.0), Map.entry(HorizonsModifier.AMMO_COST, 235.0)));
     public static final EnzymeMissileRack ENZYME_MISSILE_RACK_2_B_F_PRE = new EnzymeMissileRack("ENZYME_MISSILE_RACK_2_B_F_PRE", HorizonsBlueprintName.ENZYME_MISSILE_RACK_PRE, ModuleSize.SIZE_2, ModuleClass.B, Origin.TECHBROKER, false, Mounting.FIXED, 0, "Hpt_CausticMissile_Fixed_Medium", Map.ofEntries(Map.entry(HorizonsModifier.MASS, 4.00), Map.entry(HorizonsModifier.INTEGRITY, 51.0), Map.entry(HorizonsModifier.POWER_DRAW, 1.2), Map.entry(HorizonsModifier.BOOT_TIME, 0.0), Map.entry(HorizonsModifier.DAMAGE_PER_SECOND, 2.5), Map.entry(HorizonsModifier.DAMAGE, 5.0), Map.entry(HorizonsModifier.DISTRIBUTOR_DRAW, 0.08), Map.entry(HorizonsModifier.THERMAL_LOAD, 1.5), Map.entry(HorizonsModifier.ARMOUR_PIERCING, 60.0), Map.entry(HorizonsModifier.SHOT_SPEED, 750.0), Map.entry(HorizonsModifier.RATE_OF_FIRE, 0.500), Map.entry(HorizonsModifier.BURST_INTERVAL, 2.000), Map.entry(HorizonsModifier.AMMO_CLIP_SIZE, 8.0), Map.entry(HorizonsModifier.AMMO_MAXIMUM, 64.0), Map.entry(HorizonsModifier.RELOAD_TIME, 5.0), Map.entry(HorizonsModifier.BREACH_DAMAGE, 0.0), Map.entry(HorizonsModifier.MIN_BREACH_CHANCE, 0.80), Map.entry(HorizonsModifier.MAX_BREACH_CHANCE, 1.0), Map.entry(HorizonsModifier.EXPLOSIVE_DAMAGE_RATIO, 0.8), Map.entry(HorizonsModifier.CAUSTIC_DAMAGE_RATIO, 0.2), Map.entry(HorizonsModifier.DAMAGE_FALLOFF_START, 3000.0), Map.entry(HorizonsModifier.AMMO_COST, 235.0)));
+    public static final EnzymeMissileRack ENZYME_MISSILE_RACK_2_B_F_MERC = new EnzymeMissileRack("ENZYME_MISSILE_RACK_2_B_F", HorizonsBlueprintName.ENZYME_MISSILE_RACK, ModuleSize.SIZE_2, ModuleClass.B, Origin.TECHBROKER, false, Mounting.FIXED, 480500, "Hpt_CausticMissile_Fixed_Medium", Map.ofEntries(Map.entry(HorizonsModifier.MASS, 4.00), Map.entry(HorizonsModifier.INTEGRITY, 51.0), Map.entry(HorizonsModifier.POWER_DRAW, 1.2), Map.entry(HorizonsModifier.BOOT_TIME, 0.0), Map.entry(HorizonsModifier.DAMAGE_PER_SECOND, 2.5), Map.entry(HorizonsModifier.DAMAGE, 5.0), Map.entry(HorizonsModifier.DISTRIBUTOR_DRAW, 0.08), Map.entry(HorizonsModifier.THERMAL_LOAD, 1.5), Map.entry(HorizonsModifier.ARMOUR_PIERCING, 60.0), Map.entry(HorizonsModifier.SHOT_SPEED, 750.0), Map.entry(HorizonsModifier.RATE_OF_FIRE, 0.500), Map.entry(HorizonsModifier.BURST_INTERVAL, 2.000), Map.entry(HorizonsModifier.AMMO_CLIP_SIZE, 8.0), Map.entry(HorizonsModifier.AMMO_MAXIMUM, 64.0), Map.entry(HorizonsModifier.RELOAD_TIME, 5.0), Map.entry(HorizonsModifier.BREACH_DAMAGE, 0.0), Map.entry(HorizonsModifier.MIN_BREACH_CHANCE, 0.80), Map.entry(HorizonsModifier.MAX_BREACH_CHANCE, 1.0), Map.entry(HorizonsModifier.EXPLOSIVE_DAMAGE_RATIO, 0.8), Map.entry(HorizonsModifier.CAUSTIC_DAMAGE_RATIO, 0.2), Map.entry(HorizonsModifier.DAMAGE_FALLOFF_START, 3000.0), Map.entry(HorizonsModifier.AMMO_COST, 235.0)));
 
     static {
         ENZYME_MISSILE_RACK_2_B_F_PRE.getModifications().add(
                 new Modification(HorizonsBlueprintType.HIGH_CAPACITY_MAGAZINE_INCREASED_DAMAGE, 1.0, HorizonsBlueprintGrade.GRADE_5)
         );
+        ENZYME_MISSILE_RACK_2_B_F_MERC.getModifications().add(
+                new Modification(HorizonsBlueprintType.MERC_HIGH_YIELD_ENZYME_MISSILE_RACK, 1.0, HorizonsBlueprintGrade.GRADE_1)
+        );
     }
 
     public static final List<EnzymeMissileRack> ENZYME_MISSILE_RACKS = List.of(
             ENZYME_MISSILE_RACK_2_B_F,
-            ENZYME_MISSILE_RACK_2_B_F_PRE
+            ENZYME_MISSILE_RACK_2_B_F_PRE,
+            ENZYME_MISSILE_RACK_2_B_F_MERC
     );
 
     public EnzymeMissileRack(String id, HorizonsBlueprintName name, ModuleSize moduleSize, ModuleClass moduleClass, boolean multiCrew, Mounting mounting, long basePrice, String internalName, Map<HorizonsModifier, Object> attributes) {
@@ -49,7 +54,10 @@ public class EnzymeMissileRack extends HardpointModule {
 
     @Override
     public List<HorizonsBlueprintType> getAllowedBlueprints() {
-        return List.of(HorizonsBlueprintType.MERC_HIGH_YIELD_ENZYME_MISSILE_RACK);
+        if(ENZYME_MISSILE_RACK_2_B_F_MERC.equals(this)){
+            return List.of(HorizonsBlueprintType.MERC_HIGH_YIELD_ENZYME_MISSILE_RACK);
+        }
+        return Collections.emptyList();
     }
 
     @Override
@@ -65,6 +73,10 @@ public class EnzymeMissileRack extends HardpointModule {
     @Override
     public boolean isPreEngineered() {
         return ENZYME_MISSILE_RACK_2_B_F_PRE.equals(this);
+    }
+    @Override
+    public boolean isMerc() {
+        return ENZYME_MISSILE_RACK_2_B_F_MERC.equals(this);
     }
 
     @Override
